samples/_failures_safe/1760885717_fc6438_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a67d0b8a.c: In function ‘main’:
./samples/SAFE/__tmp_a67d0b8a.c:152:16: error: missing terminating " character
  152 |         printf("Invalid columns for
      |                ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a67d0b8a.c:152:9: error: expected expression at end of input
  152 |         printf("Invalid columns for
      |         ^~~~~~
./samples/SAFE/__tmp_a67d0b8a.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a67d0b8a.c:152:9: error: expected declaration or statement at end of input
